data/derived/comb/progs/unify/prog7940.ml.out
Characters 44-45:
  let _ = eval(Power(VarX, VarY, VarY), 0.25, 0);;
                                              ^
Error: This expression has type int but an expression was expected of type
         float
